--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "rimraf": "^3.0.0",
     "supertest": "^4.0.2",
     "supertest-session": "^4.0.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-notifier": "^1.8.0"
   },
   "nodemonConfig": {
     "ext": "js,json,njk,scss",
