--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     }
   },
   "dependencies": {
-    "@cdssnc/webpack-starter": "^2.0.2",
+    "@csstools/postcss-sass": "^4.0.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
     "copy-template-dir": "^1.4.0",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
     "csurf": "^1.10.0",
     "dotenv": "^8.2.0",
@@ -43,12 +46,12 @@
     "express-validator": "^6.2.0",
     "helmet": "^3.21.2",
     "i18n": "^0.8.4",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "nunjucks": "^3.2.0",
+    "postcss-loader": "^3.0.0",
     "request": "^2.88.0",
     "tailwindcss": "^1.1.3",
-    "@csstools/postcss-sass": "^4.0.0",
-    "@fullhuman/postcss-purgecss": "^1.3.0"
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
     "@aws-cdk/aws-docdb": "1.17.1",
