--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "helmet": "^3.21.2",
     "i18n": "^0.8.4",
     "mini-css-extract-plugin": "^0.8.2",
+    "morgan": "^1.10.0",
     "nunjucks": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "request": "^2.88.0",
