--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,7 @@
 name: Node CI
 on: push
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -24,3 +24,45 @@ jobs:
       run: npm run lint
       env:
         CI: true
+  deploy:
+    name: Build container and deploy
+    env:
+      AZURE_CONTAINER_REGISTRY_SERVER: ${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}
+    runs-on: ubuntu-latest
+    needs: test
+    # if: github.ref == 'refs/heads/master'
+    steps:
+      - name: 'Checkout Github Action' 
+        uses: actions/checkout@master
+    
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}
+          username: ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }}
+          password: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
+
+      - name: Build the Docker image
+        run: docker build -t base --build-arg GITHUB_SHA_ARG=${{ github.sha }} .
+
+      - name: Tag :latest
+        run: docker tag base $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/node-app:latest
+
+      - name: Tag :$GITHUB_SHA
+        run: docker tag base $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/node-app:${{ github.sha }}
+
+      - name: Push container to Azure Container Registry
+        run: docker push $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/node-app
+
+      - uses: azure/webapps-container-deploy@v1
+        with:
+          app-name: 'CV19Benefits-appservice'
+          images: '${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}/cv-19/node-app:${{ github.sha }}'
+      
+      - name: Azure logout
+        run: |
+          az logout
