--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "prettier": "prettier --write '**/*.{ts,js,css,html}'",
     "test": "node node_modules/jest/bin/jest.js --coverage",
     "test:watch": "node node_modules/jest/bin/jest.js --watch",
-    "postinstall": "patch-package",
     "aws": "cd cdk && cdk synth && node deploy",
     "aws-bootstrap": "node cdk/bootstrap.js",
     "aws-destroy": "node cdk/destroy.js"
@@ -52,7 +51,9 @@
     "postcss-loader": "^3.0.0",
     "request": "^2.88.0",
     "tailwindcss": "^1.1.3",
-    "webpack": "^4.42.1"
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-notifier": "^1.8.0"
   },
   "devDependencies": {
     "@aws-cdk/aws-docdb": "1.17.1",
@@ -75,13 +76,10 @@
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
-    "patch-package": "^6.2.1",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
-    "supertest-session": "^4.0.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-notifier": "^1.8.0"
+    "supertest-session": "^4.0.0"
   },
   "nodemonConfig": {
     "ext": "js,json,njk,scss",
