--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack --config webpack.prod.js",
     "dev": "cross-env nodemon --exec npm run dev:dist",
-    "dev:dist": "webpack --mode=development && cross-env NODE_ENV=development  node ./bin/www",
+    "dev:dist": "webpack --config webpack.dev.js && cross-env NODE_ENV=development  node ./bin/www",
     "start": "npm run build && cross-env NODE_ENV=production node ./bin/www",
     "lint": "node node_modules/eslint/bin/eslint.js config utils routes bin/www app.js",
     "prettier": "prettier --write '**/*.{ts,js,css,html}'",
@@ -53,7 +53,7 @@
     "tailwindcss": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-notifier": "^1.8.0"
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "@aws-cdk/aws-docdb": "1.17.1",
@@ -79,7 +79,8 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
-    "supertest-session": "^4.0.0"
+    "supertest-session": "^4.0.0",
+    "webpack-notifier": "^1.8.0"
   },
   "nodemonConfig": {
     "ext": "js,json,njk,scss",
