--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-loader": "^3.0.0",
     "request": "^2.88.0",
     "tailwindcss": "^1.1.3",
+    "uuid": "^7.0.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
