check linting before commit, but don't run tests before push

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm test"
+      "pre-commit": "npm run lint"
     }
   },
   "dependencies": {
