--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,15 @@ jobs:
       run: npm run lint
       env:
         CI: true
+    - name: Run Cypress end-to-end
+      uses: cypress-io/github-action@v1
+      env:
+        NODE_ENV: testing
+        A11Y_TRACKER_KEY: ${{ secrets.A11Y_TRACKER_KEY }}
+        CI: true
+      with:
+        install: false
+        start: npm run start:test
   deploy:
     name: Build container and deploy
     env:
