--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "i18n": "^0.8.4",
     "mini-css-extract-plugin": "^0.9.0",
     "morgan": "^1.10.0",
+    "notifications-node-client": "^4.7.3",
     "nunjucks": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "request": "^2.88.0",
