--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@csstools/postcss-sass": "^4.0.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "airtable": "^0.8.1",
     "applicationinsights": "^1.7.3",
     "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
