--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "css-loader": "^3.5.1",
     "cssnano": "^4.1.10",
     "csurf": "^1.10.0",
+    "date-fns": "^2.12.0",
     "dotenv": "^8.2.0",
     "dynamoose": "^1.11.1",
     "express": "~4.17.1",
