update readme with technical docs

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-GOOGLE_ANALYTICS=
-AWS_ACCOUNT_ID=
+# Required for Notify integration
 NOTIFY_ENDPOINT=
 NOTIFY_API_KEY=
 FEEDBACK_EMAIL_TO=
+
+# Required for Airtable integration
 AIRTABLE_API_KEY=
 AIRTABLE_BASE_ID=
+
+# Required for CDN integration
 CDN_PREFIX=
