--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -4,7 +4,7 @@ on:
       - master
 jobs:
   deploy_build_dev:
-    name: Build container and deploy
+    name: Build and deploy dev container
     env:
       AZURE_CONTAINER_REGISTRY_SERVER: ${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}
     runs-on: ubuntu-latest
