--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "airtable": "^0.8.1",
     "applicationinsights": "^1.7.3",
+    "axios": "^0.19.2",
     "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
