--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express-validator": "^6.4.1",
     "helmet": "^3.21.2",
     "i18n": "^0.8.4",
+    "jquery": "^3.5.0",
     "mini-css-extract-plugin": "^0.9.0",
     "morgan": "^1.10.0",
     "notifications-node-client": "^4.7.3",
