--- a/.github/workflows/reportA11y.yml
+++ b/.github/workflows/reportA11y.yml
@@ -1,9 +1,12 @@
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - master
+
 jobs:
   test:
+    if: github.event.pull_request.merged == 'true'
     runs-on: ubuntu-latest
     strategy:
       matrix:
