--- a/.github/workflows/reportA11y.yml
+++ b/.github/workflows/reportA11y.yml
@@ -1,12 +1,10 @@
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - master
 
 jobs:
   test:
-    if: github.event.pull_request.merged == 'true'
     runs-on: ubuntu-latest
     strategy:
       matrix:
