--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cookie-session": "^1.3.3",
     "copy-template-dir": "^1.4.0",
     "cross-env": "^7.0.2",
+    "crypto-js": "^4.0.0",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "csurf": "^1.10.0",
