--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:server": "cross-env nodemon --exec npm run test:server:start",
     "test:server:start": "webpack --config webpack.dev.js && cross-env NODE_ENV=test node ./bin/www",
     "test:watch": "node node_modules/jest/bin/jest.js --watch",
-    "cypress:run:test": "NODE_ENV=testing cypress run",
+    "cypress:run:test": "NODE_ENV=test cypress run",
     "aws": "cd cdk && cdk synth && node deploy",
     "aws-bootstrap": "node cdk/bootstrap.js",
     "aws-destroy": "node cdk/destroy.js",
