--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:dist": "webpack --config webpack.dev.js && cross-env NODE_ENV=development  node ./bin/www",
     "start": "npm run build && cross-env NODE_ENV=production node ./bin/www",
     "lint": "node node_modules/eslint/bin/eslint.js config utils routes bin/www app.js",
+    "lint:locales": "npx jsonlint -q ./locales/en.json && npx jsonlint -q ./locales/fr.json", 
     "prettier": "prettier --write '**/*.{ts,js,css,html}'",
     "test": "node node_modules/jest/bin/jest.js --coverage",
     "test:server": "cross-env nodemon --exec npm run test:server:start",
