--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -5,12 +5,19 @@ on:
 jobs:
   deploy_build_dev:
     name: Build and deploy dev container
-    env:
-      AZURE_CONTAINER_REGISTRY_SERVER: ${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout Github Action'
         uses: actions/checkout@master
+
+      - name: tag_code
+        id: tag
+        uses: anothrNick/github-tag-action@1.13.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DEFAULT_BUMP: patch
+
 
       - name: 'Login via Azure CLI'
         uses: azure/login@v1
@@ -24,22 +31,22 @@ jobs:
           password: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Build the Docker image
-        run: docker build -t base --build-arg GITHUB_SHA_ARG=${{ github.sha }} .
+        run: docker build -t base --build-arg GITHUB_SHA_ARG=${{ github.sha }}  --build-arg TAG_VERSION=${{  steps.tag.outputs.new_tag }} .
 
       - name: Tag :latest
-        run: docker tag base $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/dev:latest
+        run: docker tag base $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/release:latest
 
-      - name: Tag :$GITHUB_SHA
-        run: docker tag base $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/dev:${{ github.sha }}
+      - name: Tag :steps.tag.output.new_tag
+        run: docker tag base $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/release:${{ steps.tag.outputs.new_tag }}
 
       - name: Push container to Azure Container Registry
-        run: docker push $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/dev
+        run: docker push $AZURE_CONTAINER_REGISTRY_SERVER/cv-19/release
 
       - uses: azure/webapps-container-deploy@v1
         with:
           app-name: 'CV19Benefits-appservice'
           slot-name: 'dev'
-          images: '${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}/cv-19/dev:${{ github.sha }}'
+          images: '${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}/cv-19:${{ steps.tag.outputs.new_tag }}'
 
       - name: Azure logout
         run: |
