add details element polyfill for ie11

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:dist": "webpack --config webpack.dev.js && cross-env NODE_ENV=development  node ./bin/www",
     "start": "npm run build && cross-env NODE_ENV=production node ./bin/www",
     "lint": "node node_modules/eslint/bin/eslint.js config utils routes bin/www app.js",
-    "lint:locales": "npx jsonlint -q ./locales/en.json && npx jsonlint -q ./locales/fr.json", 
+    "lint:locales": "npx jsonlint -q ./locales/en.json && npx jsonlint -q ./locales/fr.json",
     "prettier": "prettier --write '**/*.{ts,js,css,html}'",
     "test": "node node_modules/jest/bin/jest.js --coverage",
     "test:server": "cross-env nodemon --exec npm run test:server:start",
@@ -51,6 +51,7 @@
     "cssnano": "^4.1.10",
     "csurf": "^1.10.0",
     "date-fns": "^2.12.0",
+    "details-polyfill": "^1.1.0",
     "dotenv": "^8.2.0",
     "dynamoose": "^1.11.1",
     "express": "~4.17.1",
