--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "~4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
+    "glob": "^7.1.6",
     "helmet": "^3.21.2",
     "i18n": "^0.9.1",
     "jquery": "^3.5.1",
