--- a/.github/workflows/validate-shell-scripts.yml
+++ b/.github/workflows/validate-shell-scripts.yml
@@ -11,3 +11,6 @@ jobs:
       - uses: actions/checkout@v1
       - name: shellcheck
         run: shellcheck ./bin/*.sh
+      - name: shfmt
+        go get mvdan.cc/sh/cmd/shfmt
+        shfmt -ci -i 2 -d ./bin/*.sh
