--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: 'Checkout Github Action'
         uses: actions/checkout@master
+        with: 
+          fetch-depth: '0'
 
       - name: tag_code
         id: tag
