--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@csstools/postcss-sass": "^4.0.0",
+    "accessible-autocomplete": "^2.0.2",
     "airtable": "^0.8.1",
     "applicationinsights": "^1.7.5",
     "clean-webpack-plugin": "^3.0.0",
