Updated AppService Name

--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -48,7 +48,7 @@ jobs:
 
       - uses: azure/webapps-container-deploy@v1
         with:
-          app-name: 'CV19Benefits-appservice'
+          app-name: 'DTSCV19Benefits-appservice'
           slot-name: 'dev'
           images: '${{ secrets.AZURE_CONTAINER_REGISTRY_SERVER }}/cv-19-benefit:${{ steps.tag.outputs.new_tag }}'
 
