Revert to on merge to master for now

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,4 +1,8 @@
-on: pull_request
+  
+on:
+  push:
+    branches:
+      - master
 jobs:
   deploy_build_dev:
     name: Build and push dev container
